# PyglSPG4

./: ARCHITECTURE.md  LICENSE  README-old.md  README.md  dirstruct.txt  pyproject.toml  setup.cfg  tree.txt
docs/: ARCHITECTURE.md  CAVEATS.md  CHANGELOG.md  MANPAGE.md  ROADMAP.pd  VALIDATION.md
examples/: batch_propagation.py  ground_station_alabama.py  iss_passes.py
man/: py.3  pyglspg4.3
pyglspg4/: constants.py  py.typed  tree.md
pyglspg4/api/: batch.py  exceptions.py  parallel.py  propagate.py  vectorized.py
pyglspg4/backend/: base.py  numpy.py  python.py  selector.py
pyglspg4/environment/: drag.py  spaceweather.py
pyglspg4/examples/: doppler_table_tss.py  iss_passes_alabama.py  satnogs_export.py
pyglspg4/export/: frequency_tables.py  satnogs.py
pyglspg4/frames/: eop.py  geodetic.py  gmst.py  itrf.py  itrf_to_geodetic.py  pef_to_itrf.py  polar_motion.py  sidereal.py  teme_to_ecef.py  teme_to_itrf.py  teme_to_pef.py
pyglspg4/ground/: enu.py  geodetic.py  pass_prediction.py  refraction.py  visibility.py
pyglspg4/groundstation/: doppler.py  passes.py  station.py  topocentric.py  visibility.py
pyglspg4/math/: angles.py  numerics.py  rotations.py  time.py  vectors.py
pyglspg4/parallel/: executors.py
pyglspg4/radio/: cat.py
pyglspg4/sdp4/: arguments.py  constants.py  dpper.py  dspace.py  eci.py  integrator.py  periodic.py  propagate.py  resonance.py  solar_lunar.py  state.py
pyglspg4/sgp4/: dspace.py  initializer.py  near_earth.py  propagate.py  short_period.py  state.py
pyglspg4/spg4/: initializer.py  near_earth.py  state.py
pyglspg4/tests/: test_pass_prediction.py  test_sdp4_regression.py  test_sdp4_vallado.py  test_sgp4_vallado.py
pyglspg4/time/: epochs.py  julian.py
pyglspg4/tle/: parser.py  validator.py
pyglspg4/validation/: determinism.py  reference.py  regression.py  test_determinism.py  test_regression.py  test_sdp4.py  test_sgp4.py  vallado_vectors.py
scripts/: fetch_tle.py  print_pass_table.py
