[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglspg4"
version = "0.1.0"
description = "Pure-Python LGPL SGP-4 / SDP-4 satellite propagation library"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Kris Kirby, KE4AHR" }
]
maintainers = [
    { name = "Kris Kirby, KE4AHR" }
]
keywords = [
    "sgp4",
    "sdp4",
    "satellite",
    "orbit",
    "tle",
    "hamradio",
    "space"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.9"

dependencies = [
]

[project.optional-dependencies]
numpy = ["numpy>=1.21"]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/ke4ahr/Pyglspg4"
Repository = "https://github.com/ke4ahr/Pyglspg4"
Issues = "https://github.com/ke4ahr/Pyglspg4/issues"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
pyglspg4 = ["py.typed"]

