# Copyright (C) 2025-2026 Kris Kirby, KE4AHR
# SPDX-License-Identifier: LGPL-3.0-or-later

[metadata]
name = pyglspg4
version = 0.1.0
author = Kris Kirby, KE4AHR
author_email =
description = Pure-Python LGPL SGP-4 / SDP-4 satellite propagation library
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
license_files = LICENSE
url = https://github.com/ke4ahr/Pyglspg4
project_urls =
    Source = https://github.com/ke4ahr/Pyglspg4
    Issues = https://github.com/ke4ahr/Pyglspg4/issues

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
zip_safe = False

install_requires =

[options.extras_require]
numpy =
    numpy>=1.21

dev =
    pytest
    pytest-cov
    black
    flake8
    mypy

[options.package_data]
pyglspg4 =
    py.typed

[tool:pytest]
testpaths =
    tests
addopts = -ra

[flake8]
max-line-length = 88
exclude =
    .git,
    __pycache__,
    build,
    dist

[mypy]
python_version = 3.9
ignore_missing_imports = True
strict_optional = False

